--- a/.github/workflows/okini.yml
+++ b/.github/workflows/okini.yml
@@ -6,10 +6,15 @@ on:
 jobs:
   getFavs-sendFavs:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [10.x, 12.x, 14.x, 15.x]
     steps:
-      - uses: actions/setup-node@v2
-       with:
-        node-version: '14'
-        cache: npm
+      - uses: actions/checkout@v2
       - name: execute okinibot
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+        - run: npm ci
+        - run: npm run build --if-present
         run: node ./index.js
