--- a/.github/workflows/okini.yml
+++ b/.github/workflows/okini.yml
@@ -10,11 +10,12 @@ jobs:
       matrix:
         node-version: [10.x, 12.x, 14.x, 15.x]
     steps:
-      - uses: actions/checkout@v2
-      - name: execute okinibot
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-        - run: npm ci
-        - run: npm run build --if-present
+    - uses: actions/checkout@v2
+    - name: Use Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '12.x'
+    - name: Install dependencies
+        run: npm ci
+    - name: execute okinibot
         run: node ./index.js
