--- a/.github/workflows/okini.yml
+++ b/.github/workflows/okini.yml
@@ -15,5 +15,9 @@ jobs:
         node-version: '12.x'
     - name: Install dependencies
       run: npm ci
+    - name: Install twitter
+      run: npm install twitter
+    - name: Install discord
+      run: npm install discord
     - name: execute okinibot
       run: node ./index.js
